// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should match render of wem media form 1`] = `
<LocalForm
  className="select-from-link"
  initialState={
    Object {
      "url": undefined,
    }
  }
  model="urlForm"
  onSubmit={[MockFunction]}
  validators={
    Object {
      "url": Object {
        "required": [Function],
      },
    }
  }
>
  <Connect(FormGroup)
    className="has-feedback"
    model=".url"
  >
    <Modeled(Connect(Field))
      model=".url"
    >
      <input
        className="form-control web-attachment-url"
        placeholder="Paste URL here"
        type="text"
      />
    </Modeled(Connect(Field))>
  </Connect(FormGroup)>
  <button
    className="btn"
    type="submit"
  >
    <Connect(Icon)
      icon="link"
    />
      
    <Connect(Translate)>
      Add from URL
    </Connect(Translate)>
  </button>
</LocalForm>
`;

exports[`should also display a name field when hasName is true 1`] = `
<LocalForm
  className=""
  initialState={
    Object {
      "url": undefined,
    }
  }
  model="urlForm"
  onSubmit={[MockFunction]}
  validators={
    Object {
      "name": Object {
        "required": [Function],
      },
      "url": Object {
        "required": [Function],
      },
    }
  }
>
  <Connect(FormGroup)
    className="has-feedback"
    model=".url"
  >
    <Modeled(Connect(Field))
      model=".url"
    >
      <input
        className="form-control web-attachment-url"
        placeholder="Paste URL here"
        type="text"
      />
    </Modeled(Connect(Field))>
  </Connect(FormGroup)>
  <Connect(FormGroup)
    className="form-group"
    model=".name"
  >
    <Modeled(Connect(Field))
      className="field"
      model=".name"
    >
      <input
        className="form-control web-attachment-name"
        placeholder="Title"
        type="text"
      />
    </Modeled(Connect(Field))>
  </Connect(FormGroup)>
  <button
    className="btn"
    type="submit"
  >
    <Connect(Icon)
      icon="link"
    />
      
    <Connect(Translate)>
      Add from URL
    </Connect(Translate)>
  </button>
</LocalForm>
`;
